--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morandi Travel Planner 台北升級版</title>
+    <title>Travel Planner 台北升級版</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Noto+Sans+TC:wght@300;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJ9u7E1D8Q3Gpnh0ySgG+i/O7J+tQ6v/Wd5nNlE/C8f7m42s5r5F4/L0D4qI/O9I0Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -80,7 +80,7 @@
 <body class="min-h-screen">
 
     <header class="sticky top-0 p-4 shadow-md z-20" style="background-color: var(--color-secondary);">
-        <h1 class="text-2xl font-bold text-center" style="color: var(--color-primary);">Morandi Travel Buddy</h1>
+        <h1 class="text-2xl font-bold text-center" style="color: var(--color-primary);">Travel Buddy</h1>
     </header>
 
     <main class="p-4 overflow-y-auto">
