--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>OKINAWA 2026</title>
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <link rel="icon" type="image/png" href="https://img.icons8.com/officel/512/shisa.png">
     <link rel="apple-touch-icon" href="https://img.icons8.com/officel/512/shisa.png">    
