--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>OKINAWA 2026</title>
 
-    <link rel="manifest" href="./manifest.json?v=3">
+    <link rel="manifest" href="./manifest.json?v=4">
 
-    <link rel="apple-touch-icon" href="https://img.icons8.com/officel/512/shisa.png?v=3">
-    <link rel="icon" type="image/png" href="https://img.icons8.com/officel/512/shisa.png?v=3">
+    <link rel="apple-touch-icon" href="./shisa.jpg?v=4">
+    <link rel="icon" type="image/jpeg" href="./shisa.jpg?v=4">
 
     <meta name="apple-mobile-web-app-title" content="Okinawa2026">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,6 @@
             font-family: 'Noto Sans TC', sans-serif; 
             background-color: #F7F3EE; 
             color: #334155; 
-            /* 防止 iOS 全螢幕模式下內容被瀏海遮到 */
             padding-top: env(safe-area-inset-top);
         }
         .ocean-gradient { background: linear-gradient(135deg, #075985 0%, #38BDF8 100%); }
@@ -37,7 +36,6 @@
         .calc-btn:active { transform: scale(0.95); background: #F1F5F9; }
         textarea, input, select { border: 1px solid #E2E8F0; border-radius: 12px; padding: 10px; outline: none; }
         
-        /* PWA 模式下的特殊調整 */
         @media screen and (display-mode: standalone) {
             header { padding-top: 20px; }
         }
